<resources>
    <string name="app_name">Netplix</string>
    <string name="featured_movie">Featured Movie</string>
    <string name="header_left_button">Header left button</string>
    <string name="header_right_button">Header right button</string>
    <string name="company_logo">Company logo</string>
    <string name="movie_poster">Movie poster</string>
    <string name="see_more">See More</string>
    <string name="trailer_and_detail">Trailer and Detail</string>
    <string name="close_detail_movie_modal">Close detail movie modal</string>
    <string name="trailer_video">Trailer video</string>
    <string name="movie_backdrop">Movie backdrop</string>
    <string name="movie_duration">%1$s Minutes</string>
    <string name="movie_rating">%1$s ( %2$s of Votes )</string>
    <string name="movie_release_date">Release on %1$s</string>
    <string name="official_website">Official Website</string>
    <string name="film_genre_coverage">Film Genre Coverage</string>
    <string name="production_companies">Production Companies</string>
    <string name="overview">Overview</string>
    <string name="try_again">Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="search">Search</string>
    <string name="reset_or_delete_current_search_text">Reset or delete current search text</string>
    <string name="discover_by">"Discover by %1$s"</string>
    <string name="no_data_available">No data available</string>
    <string name="failed_to_contact_the_server">Failed to contact the server</string>
    <string name="latest">Latest</string>
    <string name="no_genre_data_available">No genre data available</string>
    <string name="loading">Loading</string>
    <string name="no_company_data">No company data</string>
    <string name="time_out">Time Out</string>
</resources>