<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="@color/primary_color"
    android:elevation="12dp"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btn_left_header"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00000000"
        android:contentDescription="@string/back_to_previous_page"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:background="@drawable/bg_search"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_search"
            android:transitionName="search_icon"
            app:tint="@color/text_secondary"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="?android:color"
            android:fontFamily="@font/poppins"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:includeFontPadding="false"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/ib_clear_searct_text"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/reset_or_delete_current_search_text"
            android:src="@drawable/ic_close"
            app:tint="?android:textColorSecondary" />

    </LinearLayout>

</LinearLayout>