<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_shadow"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/ib_close_modal"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/trailer_and_detail"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/ib_close_modal"
                        style="@style/rippleable_circular"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rounded_corner_primary"
                        android:contentDescription="@string/close_detail_movie_modal"
                        android:src="@drawable/ic_close" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/yt_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="12dp"
                        android:contentDescription="@string/trailer_video" />

                    <ImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/black"
                        android:contentDescription="@string/movie_backdrop"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-80dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:layout_marginStart="16dp"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="4dp">

                            <ImageView
                                android:id="@+id/iv_poster"
                                android:layout_width="100dp"
                                android:layout_height="150dp"
                                android:background="@color/tertiary"
                                android:contentDescription="@string/movie_poster"
                                android:scaleType="centerCrop"
                                android:transitionName="poster_image_view"
                                tools:src="@tools:sample/avatars" />

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginHorizontal="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/poppins_medium"
                                android:includeFontPadding="false"
                                android:maxLines="1"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="18sp"
                                tools:text="Pearl Harbour" />

                            <TextView
                                android:id="@+id/tv_duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/poppins"
                                android:includeFontPadding="false"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="12sp"
                                tools:text="120 Minutes" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:src="@drawable/ic_star"
                                    tools:ignore="ContentDescription" />

                                <TextView
                                    android:id="@+id/tv_rating"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/poppins"
                                    android:includeFontPadding="false"
                                    android:textColor="?android:textColorSecondary"
                                    android:textSize="12sp"
                                    tools:text="8.5 ( 2296 of vote )" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_tag"
                            app:tint="@color/secondary_color"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_tagline"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="14sp"
                            tools:text="The world needed a hero. It got Black Adam." />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_website"
                        style="@style/rippleable_circular"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rounded_corner_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingVertical="0dp"
                        android:text="@string/official_website"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:scrollbarSize="120sp"
                        android:text="@string/film_genre_coverage"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="4dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="6"
                        tools:listitem="@layout/genre_item_outlined" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:scrollbarSize="120sp"
                        android:text="@string/production_companies"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_companies_list_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp"
                        android:visibility="visible"
                        tools:text="List Message" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_companies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="4dp"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="6"
                        tools:listitem="@layout/company_item" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:scrollbarSize="120sp"
                        android:text="@string/overview"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="14sp"
                        tools:text="Nearly 5,000 years after he was bestowed with the almighty powers of the Egyptian gods—and imprisoned just as quickly—Black Adam is freed from his earthly tomb, ready to unleash his unique form of justice on the modern world." />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>